[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Guns/Pick/W_25_Time_Bomb_Pick.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Guns/W_25_Time_Bomb.png" type="Texture" id=5]
[ext_resource path="res://Scenes/FX/FX-21-Timer_Label.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.88681, 15.8847 )

[sub_resource type="Animation" id=3]
resource_name = "Armed"

[sub_resource type="Animation" id=4]
resource_name = "Idle"

[node name="W_25_Time_Bomb_Pick" type="RigidBody2D" groups=["FX", "PickUp"]]
collision_layer = 524288
collision_mask = 786462
mass = 600.0
physics_material_override = SubResource( 1 )
gravity_scale = 6.0
continuous_cd = 2
contacts_reported = 12
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
gun_num = 25
damage = 125
ex_num = 25
my_time = 6.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Timer_Spin" type="Timer" parent="."]
wait_time = 0.1

[node name="FX-21-Timer_Label" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.982155, 19.4326 )
stay_straight = false
text_color = Color( 1, 1, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Armed = SubResource( 3 )
anims/Idle = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Spin" to="." method="_on_Timer_Spin_timeout"]
